--- a/.repo/rules.toml
+++ b/.repo/rules.toml
@@ -1,2 +1,6 @@
 renamedirs = [ "[repo]/src/factory",]
-editlines = [ [ "[repo]/Makefile", "APPNAME=\"factory\"", "APPNAME=\"[newname]\"",],]
+editlines = [ 
+[ "[repo]/Makefile", "APPNAME=\"factory\"", "APPNAME=\"[newname]\"",],
+[ "[repo]/pyproject.toml", "name = \"factory\"", "name = \"[newname]\"",],
+[ "[repo]/pyproject.toml", "packages = [{include = \"factory\", from = \"src\"}]", "packages = [{include = \"[newname]\", from = \"src\"}]",],
+]
