--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ packages = [{include = "factory", from = "src"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 click = "^8.1.3"
+flask = "^3.0.0"
+highkit = { git = "https://github.com/terminal-labs/high_kit.git", branch = "main" }
+toml = "^0.10.2"
 
 [tool.poetry.scripts]
 factory = 'factory.cli:cli'
