--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ packages = [{include = "factory", from = "src"}]
 python = "^3.11"
 click = "^8.1.3"
 flask = "^3.0.0"
-highkit = { git = "https://github.com/terminal-labs/high_kit.git", branch = "main" }
 toml = "^0.10.2"
+pyyaml = "^6.0.1"
 
 [tool.poetry.scripts]
 factory = 'factory.cli:cli'
