--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ click = "^8.1.3"
 flask = "^3.0.0"
 toml = "^0.10.2"
 pyyaml = "^6.0.1"
+beautifulsoup4 = "^4.12.3"
+lxml = "^5.1.0"
 
 [tool.poetry.scripts]
 factory = 'factory.cli:cli'
