--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ toml = "^0.10.2"
 pyyaml = "^6.0.1"
 beautifulsoup4 = "^4.12.3"
 lxml = "^5.1.0"
+black = "^24.1.1"
 
 [tool.poetry.scripts]
 factory = 'factory.cli:cli'
