--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pyyaml = "^6.0.1"
 beautifulsoup4 = "^4.12.3"
 lxml = "^5.1.0"
 black = "^24.1.1"
+flake8 = "^7.0.0"
 
 [tool.poetry.scripts]
 factory = 'factory.cli:cli'
