--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "factory"
+name = "factorystandard"
 version = "0.0.1"
 description = ""
 authors = ["Michael Verhulst <michael@terminallabs.com>"]
 readme = "README.md"
-packages = [{include = "factory", from = "src"}]
+packages = [{include = "factorystandard", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -18,7 +18,7 @@ black = "^24.1.1"
 flake8 = "^7.0.0"
 
 [tool.poetry.scripts]
-factory = 'factory.cli:cli'
+factorystandard = 'factorystandard.cli:cli'
 
 [build-system]
 requires = ["poetry-core"]
