--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,8 @@ beautifulsoup4 = "^4.12.3"
 lxml = "^5.1.0"
 black = "^24.1.1"
 flake8 = "^7.0.0"
-lowkit = { git = "git@github.com:terminal-labs-bem/lowkit.git"}
-highkit = { git = "git@github.com:terminal-labs-bem/highkit.git"}
+lowkit = { git = "https://github.com/terminal-labs-bem/lowkit.git"}
+highkit = { git = "https://github.com/terminal-labs-bem/highkit.git"}
 
 [tool.poetry.scripts]
 factory = 'factory.ux.cli:cli'
