--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ black = "^24.1.1"
 flake8 = "^7.0.0"
 lowkit = { git = "https://github.com/terminal-labs-bem/lowkit.git"}
 highkit = { git = "https://github.com/terminal-labs-bem/highkit.git"}
+pytest = "^8.1.1"
 
 [tool.poetry.scripts]
 factory = 'factory.ux.cli:cli'
