--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,16 +10,13 @@ packages = [{include = "factory", from = "src"}]
 python = "^3.11"
 click = "^8.1.3"
 flask = "^3.0.0"
-toml = "^0.10.2"
-pyyaml = "^6.0.1"
-beautifulsoup4 = "^4.12.3"
-lxml = "^5.1.0"
-black = "^24.1.1"
-flake8 = "^7.0.0"
-lowkit = { git = "https://github.com/terminal-labs-bem/lowkit.git"}
-highkit = { git = "https://github.com/terminal-labs-bem/highkit.git"}
 pytest = "^8.1.1"
-psutil = "^5.9.8"
+black = "^24.3.0"
+flake8 = "^7.0.0"
+coverage = "^7.4.4"
+lowkit = {git = "https://github.com/terminal-labs-bem/lowkit.git"}
+highkit = {git = "https://github.com/terminal-labs-bem/highkit.git"}
+
 
 [tool.poetry.scripts]
 factory = 'factory.ux.cli:cli'
